output.txt
   Compiling vaultsync v0.1.0 (D:\Projects\VaultSync)
warning: unused imports: `self` and `self`
  --> tests\api_integration_tests.rs:9:15
   |
 9 |     buylist::{self, BuylistService},
   |               ^^^^
...
14 |     sync::{self, SyncActor},
   |            ^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0615]: attempted to take value of method `is_production` on type `Config`
  --> tests\api_integration_tests.rs:21:12
   |
21 |     config.is_production = false;
   |            ^^^^^^^^^^^^^ method, not a field
   |
   = help: methods are immutable and cannot be assigned to

For more information about this error, try `rustc --explain E0615`.
warning: `vaultsync` (test "api_integration_tests") generated 1 warning
error: could not compile `vaultsync` (test "api_integration_tests") due to 1 previous error; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
